web/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meridional-plastic
  labels:
    name: meridional-plastic
    environment: production
